--- a/CSS6.css
+++ b/CSS6.css
@@ -1,3 +1,13 @@
+/*
+- Assignment 6: Creating an Interactive Dynamic Table
+  - Joshua Blanchette, UMass Lowell Computer Science Transfer Student
+  - Email:  Joshua_Blanchette@student.uml.edu
+  - Date: 10/22/2014
+  - This page contains my CSS that makes my page look pretty.  There is a
+  - link in my html file that allows the two files to talk to each other.
+*/
+
+
 /*Im assuming that using the html tag to customize all of my page
   is not a good idea, but I thought it was suitable for this project.
   This code adds a nice, subtle background color, and specifies a certain
